k8s/helm/istio/mesh/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-world
  namespace: istio-ingress
spec:
  hosts:
    - "hello-world.local"  # domain that triggers this route
  gateways:
    - istio-ingress/main-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: hello-world.hello-world.svc.cluster.local
            port:
              number: 3040
